tests/error/missing_module.vow
// TEST: stderr "IoError"
module MissingModule

use nonexistent.thing

fn main() -> i32 { 0 }
